using UiS.Dat240.Lab3.SharedKernel;

namespace UiS.Dat240.Lab3.Core.Domain.Ordering{

public enum Status{
    New, 
    Placed,
    Shipped, 
    Delivered,
    Missing, 
    Declined
}
}